--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "firebase": "^12.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
